tests/ui/struct_empty.rs
#[derive(pg_mapper::TryFromRow)]
struct MyStruct {}

fn main() {}
